# docklearn

./: .clang-format  CMakeLists.txt
qml/: main.qml  root.qrc
src/: main.cpp
src/backgrounds/testbackground/: backgroundtest.cpp  backgroundtest.h
src/backgrounds/x11/: XorgBackground.cpp  XorgBackground.h  xcbutils.cpp  xcbutils.h
src/models/: elementGroupModel.cpp  elementGroupModel.h  windowelement.cpp  windowelement.h
